[TASK] Code rewrite

--- a/Resources/Private/Templates/Backend/Configuration/BackendEdit.html
+++ b/Resources/Private/Templates/Backend/Configuration/BackendEdit.html
@@ -161,7 +161,7 @@
             </label>
             <div class="col-sm-9">
                 <input type="url" class="form-control" id="redirectUriBackend" name="data[redirectUriBackend]"
-                       value="{config.redirectUriBackend}" placeholder="https://example.com/typo3/azure-login/callback" />
+                       value="{config.redirectUriBackend}" placeholder="https://example.com/typo3/index.php?route=/azure-login/callback" />
                 <div class="form-text">
                     <f:translate key="LLL:EXT:ok_azure_login/Resources/Private/Language/locallang_be_module.xlf:label.redirectUriBackend.description" />
                 </div>
