--- a/Resources/Private/Templates/Login/AzureLoginForm.html
+++ b/Resources/Private/Templates/Login/AzureLoginForm.html
@@ -7,12 +7,6 @@
 <f:layout name="Login" />
 
 <f:section name="loginFormFields">
-    <f:be.pageRenderer
-        includeRequireJsModules="{
-            0: 'TYPO3/CMS/Backend/UserPassLogin'
-        }"
-    />
-
     <f:if condition="{azureLogins}">
         <f:for each="{azureLogins}" as="azureLogin">
             <div class="form-group" style="padding: 0 0 8px 0;">
@@ -63,30 +57,9 @@
     <div class="form-group t3js-login-username-section" id="t3-login-username-section">
         <div class="form-control-wrap">
             <div class="form-control-holder">
-                <input
-                    type="text"
-                    id="t3-username"
-                    name="username"
-                    value="{presetUsername}"
-                    aria-label="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.username')}"
-                    placeholder="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.username')}"
-                    class="form-control form-control-clearable input-login t3js-clearable t3js-login-username-field"
-                    autofocus="autofocus"
-                    autocomplete="username"
-                    required="required"
-                    spellcheck="false"
-                    data-clearable-label="{f:translate(key: 'LLL:EXT:core/Resources/Private/Language/locallang_core.xlf:labels.inputfield.clearButton.title')}"
-                />
-                <div role="status" class="form-notice-capslock hidden t3js-login-alert-capslock">
-                    <img
-                        aria-hidden="true"
-                        src="{images.capslock}"
-                        width="14"
-                        height="14"
-                        alt=""
-                        title="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.error.capslock')}"
-                    />
-                    <span class="visually-hidden"><f:translate key="LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.error.capslockStatus" /></span>
+                <input type="text" id="t3-username" name="username" value="{presetUsername}" aria-label="{f:translate(key: 'login.username')}" placeholder="{f:translate(key: 'login.username')}" class="form-control input-login t3js-clearable t3js-login-username-field" autofocus="autofocus" required="required" />
+                <div class="form-notice-capslock hidden t3js-login-alert-capslock">
+                    <img src="{images.capslock}" width="14" height="14" alt="{f:translate(key: 'login.error.capslock')}" title="{f:translate(key: 'login.error.capslock')}" />
                 </div>
             </div>
         </div>
@@ -94,47 +67,11 @@
     <div class="form-group t3js-login-password-section" id="t3-login-password-section">
         <div class="form-control-wrap">
             <div class="form-control-holder">
-                <div class="input-group">
-                <input
-                    type="password"
-                    id="t3-password"
-                    name="p_field"
-                    value="{presetPassword}"
-                    aria-label="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.password')}"
-                    placeholder="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.password')}"
-                    class="form-control input-login t3js-clearable t3js-login-password-field"
-                    autocomplete="current-password"
-                    required="required"
-                    spellcheck="false"
-                    data-clearable-label="{f:translate(key: 'LLL:EXT:core/Resources/Private/Language/locallang_core.xlf:labels.inputfield.clearButton.title')}"
-                />
-                <button type="button"
-                    class="t3js-login-toggle-password btn btn-outline-secondary hidden"
-                    aria-label="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.togglePassword')}"
-                >
-                    <core:icon identifier="actions-eye" size="small" />
-                </button>
-                <div role="status" class="form-notice-capslock hidden t3js-login-alert-capslock">
-                    <img
-                        aria-hidden="true"
-                        src="{images.capslock}"
-                        width="14"
-                        height="14"
-                        alt=""
-                        title="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.error.capslock')}"
-                    />
-                    <span class="visually-hidden"><f:translate key="LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.error.capslockStatus" /></span>
-                </div>
+                <input type="password" id="t3-password" name="p_field" value="{presetPassword}" aria-label="{f:translate(key: 'login.password')}" placeholder="{f:translate(key: 'login.password')}" class="form-control input-login t3js-clearable t3js-login-password-field" required="required" data-rsa-encryption="t3-field-userident" />
+                <div class="form-notice-capslock hidden t3js-login-alert-capslock">
+                    <img src="{images.capslock}" width="14" height="14" alt="{f:translate(key: 'login.error.capslock')}" title="{f:translate(key: 'login.error.capslock')}" />
                 </div>
             </div>
-        </div>
-    </div>
-</f:section>
-
-<f:section name="ResetPassword">
-    <div class="forgot-password my-3">
-        <div class="text-end">
-            <a href="{forgetPasswordUrl}"><f:translate key="LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.password_forget" /></a>
         </div>
     </div>
 </f:section>
